2010-06-08 Doug Simons <doug.simons@testplant.com>

	* Source/NSMenu.m:
	Fix menu key equivalents to only trigger when the exact modifiers
	are held down. Previously, an item would activate even when additional
	modifiers were held down (e.g. typing Ctrl-Alt-x would activate a
	menu item whose key equivalent was Ctrl-x).

2010-06-07 Doug Simons <doug.simons@testplant.com>

	* Source/NSMenuItem.m:
	Implement NSUserKeyEquivalents default for providing custom key
	equivalents for menu items based on their title.

2010-06-05  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GSWindowDecorationView.m ([-removeSubview:]): Uncommented
	the method, fixing moving the content view from one window to
	another one.

2010-06-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-finishLaunching): Do not attempt to
	open an	untitled document in a document based application that
	does not define an editor type.

2010-06-01  Quentin Mathe <quentin.mathe@gmail.com>

	Fixed many drawing issues (many ones being related to the flipping).
	In particular, fixed -[NSImage drawXXX] methods to work exactly as 
	Cocoa and improve the drawing performance in some cases (the last two 
	points only holds with Cairo backend).
	Eliminated as many flipping checks as possible.
	Warning: Untested with the winlib backend.
	* Headers/AppKit/NSGraphicsContext.h:
	* Source/NSGraphicsContext.m:
	(-supportsDrawGState, -GSdraw:toPoint:fromRect:operation:fraction:): 
	Added (see also the Backend Changelog).
	* Source/NSImage.m
	(-drawInRect:fromRect:operation:fraction:): Moved the previous 
	implementation to -guiDrawInRect:fromRect:operation:fraction: and 
	rewritten as a switch that checks -supportsDrawState.
	(-guiDrawInRect:fromRect:operation:fraction:): New method identical to 
	the old -drawInRect:fromRect:operation:fraction:.
	(-nativeDrawInRect:fromRect:operation:fraction:): Added. 
	New method that leverages the backend as much possible and implement 